--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Buildo Web</title>
+  <title>RawTopia Web</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .fade-in { animation: fadeIn 0.8s ease-in-out; }
@@ -46,7 +46,7 @@
   <header class="bg-gray-900 w-full py-4 md:py-6 shadow-md mb-10">
     <div class="max-w-4xl mx-auto px-4 md:px-6 text-center">
       <h1 class="text-3xl md:text-4xl font-extrabold tracking-wide flex justify-center items-center gap-3">
-        🌐 Buildo Host Setup
+        🌐 RawTopia Host Setup
       </h1>
       <p class="text-gray-400 mt-2 text-xs md:text-sm">Set up your host files for different platforms easily. If you encountered bugs please report it to @Clem on Discord!</p>
 
@@ -68,7 +68,7 @@
       <h2 class="text-2xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-500 mb-4">
         ⬇️ Download Android Host File
       </h2>
-      <a id="downloadBtn" href="#" download="Buildo_hosts.txt"
+      <a id="downloadBtn" href="#" download="rawtopia_hosts.txt"
          class="bg-blue-600 hover:bg-blue-700 transition-all px-6 py-3 rounded-full inline-block font-medium">
         📄 Download Host File
       </a>
@@ -151,7 +151,7 @@ RvLnd.here = 91.134.85.13</textarea>
     <div class="modal">
       <h2>Application Form</h2>
       <form action="https://formsubmit.co/harriepoonin2@gmail.com" method="POST">
-        <label>1. Discord & Buildo ID</label>
+        <label>1. Discord & RawTopia ID</label>
         <input type="text" name="Full Name" required>
 
         <label>2. Email</label>
