--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h1 class="text-3xl md:text-4xl font-extrabold tracking-wide flex justify-center items-center gap-3">
         🌐 RawTopia Host Setup
       </h1>
-      <p class="text-gray-400 mt-2 text-xs md:text-sm">Set up your host files for different platforms easily. If you encountered bugs please report it to @Clem on Discord!</p>
+      <p class="text-gray-400 mt-2 text-xs md:text-sm">Set up your host files for different platforms easily. If you encountered bugs please report it to @Name on Discord!</p>
 
       <!-- Buttons -->
       <div class="flex justify-center gap-4 mt-4">
@@ -143,7 +143,7 @@ RvLnd.here = 91.134.85.13</textarea>
 
   <!-- Footer -->
   <footer class="mt-12 text-center text-sm text-gray-500 pb-6">
-    &copy; Created By Clem. All rights reserved.
+    &copy; Created By Name. All rights reserved.
   </footer>
 
   <!-- Apply Form Overlay -->
