--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="bg-gray-800 p-4 md:p-6 rounded-lg shadow-md">
         <h2 class="text-xl font-semibold mb-3">⚙️ Power Tunnel Host</h2>
         <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">Click to copy Power Tunnel URL</div>
-        <textarea id="PtunnelText" class="hidden" readonly>https://growsoft.cc/android.txt</textarea>
+        <textarea id="PtunnelText" class="hidden" readonly>https://dash.gtps.cloud/android/1804</textarea>
         <button onclick="copyText('PtunnelText')" class="w-full md:w-auto mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">📋 Copy</button>
       </div>
 
@@ -99,10 +99,10 @@
         <h2 class="text-xl font-semibold mb-3">🍏 macOS Host</h2>
         <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">Copy macOS host entries for your system</div>
         <textarea id="macText" class="hidden" readonly>
-91.134.85.13 growtopia1.com
-91.134.85.13 growtopia2.com
-91.134.85.13 www.growtopia1.com
-91.134.85.13 www.growtopia2.com</textarea>
+5.39.46.36 growtopia1.com
+5.39.46.36 growtopia2.com
+5.39.46.36 www.growtopia1.com
+5.39.46.36 www.growtopia2.com</textarea>
         <button onclick="copyText('macText')" class="w-full md:w-auto mt-2 bg-green-600 hover:bg-green-700 px-4 py-2 rounded transition-all">📋 Copy</button>
       </div>
 
@@ -111,10 +111,10 @@
         <h2 class="text-xl font-semibold mb-3">🪟 Windows Host</h2>
         <div class="bg-gray-700 p-3 rounded text-sm text-gray-300 mb-2">Copy Windows host entries to clipboard</div>
         <textarea id="windowsText" class="hidden" readonly>
-91.134.85.13 growtopia1.com
-91.134.85.13 growtopia2.com
-91.134.85.13 www.growtopia1.com
-91.134.85.13 www.growtopia2.com</textarea>
+5.39.46.36 growtopia1.com
+5.39.46.36 growtopia2.com
+5.39.46.36 www.growtopia1.com
+5.39.46.36 www.growtopia2.com</textarea>
         <button onclick="copyText('windowsText')" class="w-full md:w-auto mt-2 bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded transition-all">📋 Copy</button>
       </div>
 
@@ -130,11 +130,11 @@ bypass-system = true
 FINAL,DIRECT
 
 [Host]
-growtopia1.com = 91.134.85.13
-growtopia2.com = 91.134.85.13
-www.growtopia1.com = 91.134.85.13
-www.growtopia2.com = 91.134.85.13
-RvLnd.here = 91.134.85.13</textarea>
+growtopia1.com = 5.39.46.36
+growtopia2.com = 5.39.46.36
+www.growtopia1.com = 5.39.46.36
+www.growtopia2.com = 5.39.46.36
+RvLnd.here = 5.39.46.36</textarea>
         <button onclick="copyText('iosText')" class="w-full md:w-auto mt-2 bg-purple-600 hover:bg-purple-700 px-4 py-2 rounded transition-all">📋 Copy</button>
       </div>
 
